k8s-manifests/gitbucket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitbucket-deployment
  labels:
    app: gitbucket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitbucket
  template:
    metadata:
      labels:
        app: gitbucket
    spec:
      containers:
      - name: gitbucket
        image: smirnovaanastasiia/gitbucket:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gitbucket-service
spec:
  selector:
    app: gitbucket
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
